# gulliview

./: .gitignore  CMakeLists.txt  Makefile  README.md  gitDiffOut.txt  github_id  github_id.pub  latestout.txt
GulliView_logs/: Data_class.py  Log_class.py  README.md  config.ini  functions.py  main.py  run.bat
Project_Report/typst/: content.typ  cover.typ  main.typ
logging/src/: bar_graphs.py  gulliv_log_moving_accuracy.py  gulliv_log_static_accuracy.py  gulliv_log_times.py  gullivutil.py  src.rar  visualize_logs.py
scripts/: startCamerasBroadcast.sh  startCamerasBroadcast1080.sh  startCamerasBroadcast2160.sh  startCamerasBroadcast300.sh  startCamerasBroadcast360.sh  startCamerasBroadcast480.sh  startCamerasBroadcast600.sh  startCamerasBroadcast720.sh  startCamerasMerging.sh  startGulliViewMultithread.sh
src/: AprilTypes.h  CMakeLists.txt  CameraUtil.cpp  CameraUtil.h  Detections.h  Makefile  TagFamily.cpp  TagFamily.h  Transmitter.cpp  cmake_install.cmake  record.sh
src/GulliView/: AccelerationTracker.cpp  AccelerationTracker.hpp  AngleTracker.cpp  AngleTracker.hpp  CalibrateCameras.cpp  CalibrateCameras.hpp  DebugLogger.cpp  DebugLogger.hpp  Declarations.hpp  FastSearch.cpp  FastSearch.hpp  FastSearchFunctions.cpp  FastSearchFunctions.hpp  FastThread.cpp  FastThread.hpp  GUI.cpp  GUI.hpp  GeneralSearchFunctions.cpp  GeneralSearchFunctions.hpp  GlobalCoordination.cpp  GlobalCoordination.hpp  InitCameras.cpp  InitCameras.hpp  LogTime.cpp  LogTime.hpp  Main.cpp  NiceThread.cpp  NiceThread.hpp  ProcessCamera.cpp  ProcessCamera.hpp  ProducerThread.cpp  ProducerThread.hpp  TransformFrame.cpp  TransformFrame.hpp  Undistortion.cpp  Undistortion.hpp
